[gd_scene load_steps=7 format=3 uid="uid://cwave_info_panel"]

[ext_resource type="Script" path="res://scripts/ui/wave_info_panel.gd" id="1_wave_info"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_bg"]
bg_color = Color(0.2, 0.2, 0.25, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_fill"]
bg_color = Color(0.3, 0.6, 0.9, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_enemy_progress_bg"]
bg_color = Color(0.15, 0.15, 0.2, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_enemy_progress_fill"]
bg_color = Color(0.8, 0.3, 0.3, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_boss_warning"]
bg_color = Color(0.5, 0.1, 0.1, 0.95)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.3, 0.3, 1)
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0

[node name="WaveInfoPanel" type="PanelContainer"]
offset_right = 220.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_wave_info")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 6

[node name="WaveNumber" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 28
text = "Wave 1"
horizontal_alignment = 1

[node name="WaveStatus" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Preparing"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EnemyContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="EnemyIcon" type="Label" parent="VBoxContainer/EnemyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Enemies:"

[node name="EnemyCount" type="Label" parent="VBoxContainer/EnemyContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "0 / 6"
horizontal_alignment = 1

[node name="EnemyProgress" type="ProgressBar" parent="VBoxContainer/EnemyContainer"]
custom_minimum_size = Vector2(60, 12)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_enemy_progress_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_enemy_progress_fill")
max_value = 6.0
show_percentage = false

[node name="IntermissionContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="CountdownLabel" type="Label" parent="VBoxContainer/IntermissionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Wave 1 starting in 20..."
horizontal_alignment = 1

[node name="IntermissionBar" type="ProgressBar" parent="VBoxContainer/IntermissionContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_progress_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_progress_fill")
max_value = 20.0
value = 20.0
show_percentage = false

[node name="SkipButton" type="Button" parent="VBoxContainer/IntermissionContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Start Wave Now"

[node name="Separator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="NextWavePreview" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "Next: Rookie Swarm"
horizontal_alignment = 1

[node name="BossWarningContainer" type="PanelContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_boss_warning")

[node name="BossWarningLabel" type="Label" parent="VBoxContainer/BossWarningContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "BOSS WAVE: Greymon"
horizontal_alignment = 1
